k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gaamingzhang-blog-service
  namespace: default
spec:
  selector:
    app: gaamingzhang-blog
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
